Add modifications to roots calculations and initialice linearAlgebra notebook.

--- a/symbolicMath.ipynb
+++ b/symbolicMath.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Symbolische Mathematik mit Python \n",
     "\n",
-    "Dieses Notebook liegt bereit um Mathematik Probleme zu losen mit Symbolen. Dieses Notebook liegt bereit um Mathematik Probleme zu lösen mit Symbolen. Man braucht ein Python Umgebung um dieses Code zu laufen. Die Konzepten, die hier präsentiert sind, sind nur ein klein Teil von allen die Sachen die Mann mit Python machen kann."
+    "Dieses Notebook liegt bereit um Mathematik Probleme mit Symbolen zu lösen. Dieses Notebook liegt bereit um Mathematik Probleme zu lösen mit Symbolen. Man braucht ein Python Umgebung um dieses Code zu laufen. Die Konzepten, die hier präsentiert sind, sind nur ein klein Teil von allen die Sachen die Mann mit Python machen kann."
    ]
   },
   {
@@ -15,12 +15,14 @@
    "id": "cc56f449",
    "metadata": {},
    "source": [
-    "### Erst, import Sympy, unser Python *Library* die unser symbolische Berechnung machen wird."
+    "### Sympy Library\n",
+    "\n",
+    "Mann muss die *Library* Sympy in unserer Python Umgebung zu deklarieren für die symbolische Berechnung."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7ec49637",
    "metadata": {},
    "outputs": [],
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "0cecfa39-8f01-4dc8-a96f-acfdef768d25",
    "metadata": {},
    "outputs": [
@@ -53,7 +55,7 @@
        "R"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "4e56950b-a5db-41af-8d7a-6fabfe09fd3c",
    "metadata": {},
    "outputs": [],
@@ -102,13 +104,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5e88c83b",
    "metadata": {},
    "outputs": [],
    "source": [
     "A = sp.Matrix([[-D_val/J_val, K2_val/J_val],\n",
     "                [-K1_val/L_val, -R_val/L_val]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff3e67d2",
+   "metadata": {},
+   "source": [
+    "Jetzt können wir die Eigenwerte von diesem Matrix zu finden:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0d79ce54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvalues: -12.8659164199533, -69.9522653982285\n",
+      "\n",
+      "Eigenvectors: (-12.8659164199533, 1, [Matrix([\n",
+      "[ 0.929902935493461],\n",
+      "[-0.367805017041155]])]), (-69.9522653982285, 1, [Matrix([\n",
+      "[-0.56329483843554],\n",
+      "[ 1.29468183990865]])])\n"
+     ]
+    }
+   ],
+   "source": [
+    "eigenvalues = A.eigenvals(multiple=True) # if the multiple=True flag is set, it returns a list of eigenvalues. Else a dictionary.\n",
+    "eigenvectors = A.eigenvects()\n",
+    "\n",
+    "print(f\"Eigenvalues: {eigenvalues[0]}, {eigenvalues[1]}\\n\")\n",
+    "print(f\"Eigenvectors: {eigenvectors[0]}, {eigenvectors[1]}\")"
    ]
   },
   {
@@ -162,6 +200,32 @@
    "source": [
     "exp_At = (A * t).exp()\n",
     "exp_At"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9275aad6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roots: -69.9522653982285, -12.865916419953312\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "coeffs = np.array([1, \n",
+    "                   (R_val/L_val) + (D_val/J_val), \n",
+    "                   ((D_val * R_val) / (J_val * L_val)) + ((K1_val * K2_val) / (L_val * J_val))\n",
+    "                  ])\n",
+    "roots = np.roots(coeffs)\n",
+    "print(f\"Roots: {roots[0]}, {roots[1]}\\n\")"
    ]
   }
  ],
