Add modifcations to Markdown.

--- a/symbolicMath.ipynb
+++ b/symbolicMath.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Symbolische Mathematik mit Python \n",
     "\n",
-    "Dieses Notebook liegt bereit um Mathematik Probleme mit Symbolen zu lösen. Dieses Notebook liegt bereit um Mathematik Probleme zu lösen mit Symbolen. Man braucht ein Python Umgebung um dieses Code zu laufen. Die Konzepten, die hier präsentiert sind, sind nur ein klein Teil von allen die Sachen die Mann mit Python machen kann."
+    "Dieses Notebook liegt bereit um Mathematik Probleme mit Symbolen zu lösen. Dieses Notebook liegt bereit um Mathematik Probleme zu lösen mit Symbolen. Man braucht ein Python Umgebung um dieses Code zu laufen. Die Konzepten, die hier präsentiert sind, sind nur ein klein Teil von alle den Sachen die Mann mit Python machen kann."
    ]
   },
   {
