Add small changes to notebook.

--- a/symbolicMath.ipynb
+++ b/symbolicMath.ipynb
@@ -229,6 +229,36 @@
     "roots = np.roots(coeffs)\n",
     "print(f\"Roots: {roots[0]}, {roots[1]}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0f711ae4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvalues: -5, -1\n",
+      "\n",
+      "exp(At): Matrix([[3*exp(-t)/4 + exp(-5*t)/4, 3*exp(-t)/4 - 3*exp(-5*t)/4], [exp(-t)/4 - exp(-5*t)/4, exp(-t)/4 + 3*exp(-5*t)/4]])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "A = sp.Matrix([[-2, 3],\n",
+    "                [1, -4]])\n",
+    "t = sp.Symbol('t')\n",
+    "eigenvalues = A.eigenvals(multiple=True)\n",
+    "print(f\"Eigenvalues: {eigenvalues[0]}, {eigenvalues[1]}\\n\")\n",
+    "\n",
+    "exp_At = (A * t).exp()\n",
+    "print(f\"exp(At): {exp_At}\\n\")"
+   ]
   }
  ],
  "metadata": {
