Added calculations for transformations.

--- a/linearAlgebra.ipynb
+++ b/linearAlgebra.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "36b524e9",
    "metadata": {},
    "outputs": [],
@@ -59,6 +59,89 @@
     "solution = sp.linsolve((A, B), (c1, c2, c3))\n",
     "\n",
     "print(\"Solution to the system:\", solution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "60521b13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvalues: -5, -1\n",
+      "\n",
+      "exp(At): Matrix([[3*exp(-t)/4 + exp(-5*t)/4, 3*exp(-t)/4 - 3*exp(-5*t)/4], [exp(-t)/4 - exp(-5*t)/4, exp(-t)/4 + 3*exp(-5*t)/4]])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "A = sp.Matrix([[-2, 3],\n",
+    "                [1, -4]])\n",
+    "t = sp.Symbol('t')\n",
+    "eigenvalues = A.eigenvals(multiple=True)\n",
+    "print(f\"Eigenvalues: {eigenvalues[0]}, {eigenvalues[1]}\\n\")\n",
+    "\n",
+    "exp_At = (A * t).exp()\n",
+    "print(f\"exp(At): {exp_At}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "29a778dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.  ],\n",
+       "        [0.25]],\n",
+       "\n",
+       "       [[1.  ],\n",
+       "        [0.  ]]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from numpy import linalg as LA\n",
+    "\n",
+    "# A = sp.Matrix([[-2, 4],\n",
+    "#                 [-2, 0]])\n",
+    "\n",
+    "# eigenvectors = A.eigenvects()\n",
+    "# T = sp.Matrix([eigenvectors[0][2], eigenvectors[1][2]])\n",
+    "# T = T.inv()\n",
+    "\n",
+    "A = np.array([[-2, 4],\n",
+    "                [-2, 0]])\n",
+    "B = np.array([[2],\n",
+    "                [10]])\n",
+    "c = np.array([1, 0]) # careful, this is a column vector\n",
+    "\n",
+    "en = np.array([[0], [1]]) # this is a row vector\n",
+    "\n",
+    "# Form the observavbility matrix\n",
+    "Po = np.array([c, np.matmul(c, A)])\n",
+    "\n",
+    "# Find the inverse of the observability matrix\n",
+    "Po_inv = LA.inv(Po)\n",
+    "\n",
+    "# Calculate the vector\n",
+    "v = np.matmul(Po_inv, en)\n",
+    "v \n",
+    "T_inv = np.array([v, np.matmul(A, v)])\n",
+    "T_inv"
    ]
   }
  ],
