Add changes to matrix transformations.

--- a/linearAlgebra.ipynb
+++ b/linearAlgebra.ipynb
@@ -93,21 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "29a778dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.  ],\n",
-       "        [0.25]],\n",
-       "\n",
-       "       [[1.  ],\n",
-       "        [0.  ]]])"
+       "array([[0.  , 1.  ],\n",
+       "       [0.25, 0.  ]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +137,7 @@
     "# Calculate the vector\n",
     "v = np.matmul(Po_inv, en)\n",
     "v \n",
-    "T_inv = np.array([v, np.matmul(A, v)])\n",
+    "T_inv = np.hstack([v, A @ v])\n",
     "T_inv"
    ]
   }
