Added changes to notebook.

--- a/linearAlgebra.ipynb
+++ b/linearAlgebra.ipynb
@@ -93,33 +93,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "29a778dd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.  , 1.  ],\n",
-       "       [0.25, 0.  ]])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observability matrix Po:\n",
+      " [[ 1  0]\n",
+      " [-2  4]]\n",
+      "Inverse of the observability matrix Po_inv:\n",
+      " [[ 1.   -0.  ]\n",
+      " [ 0.5   0.25]]\n",
+      "Vector v:\n",
+      " [[0.  ]\n",
+      " [0.25]]\n",
+      "Inverse of the transformation matrix:\n",
+      " [[0.   1.  ]\n",
+      " [0.25 0.  ]]\n",
+      "Transformation matrix T:\n",
+      " [[0. 4.]\n",
+      " [1. 0.]]\n",
+      "Normal form of A:\n",
+      " [[ 0. -8.]\n",
+      " [ 1. -2.]]\n",
+      "Normal form of B:\n",
+      " [[40.]\n",
+      " [ 2.]]\n",
+      "Normal form of c:\n",
+      " [0. 1.]\n",
+      "[[   0 -368]\n",
+      " [2944  736]]\n"
+     ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "from numpy import linalg as LA\n",
     "\n",
-    "# A = sp.Matrix([[-2, 4],\n",
-    "#                 [-2, 0]])\n",
-    "\n",
-    "# eigenvectors = A.eigenvects()\n",
-    "# T = sp.Matrix([eigenvectors[0][2], eigenvectors[1][2]])\n",
-    "# T = T.inv()\n",
-    "\n",
+    "# Define the matrices and vectors\n",
     "A = np.array([[-2, 4],\n",
     "                [-2, 0]])\n",
     "B = np.array([[2],\n",
@@ -130,15 +144,38 @@
     "\n",
     "# Form the observavbility matrix\n",
     "Po = np.array([c, np.matmul(c, A)])\n",
+    "print(\"Observability matrix Po:\\n\", Po)\n",
     "\n",
     "# Find the inverse of the observability matrix\n",
     "Po_inv = LA.inv(Po)\n",
+    "print(\"Inverse of the observability matrix Po_inv:\\n\", Po_inv)\n",
     "\n",
     "# Calculate the vector\n",
     "v = np.matmul(Po_inv, en)\n",
-    "v \n",
+    "print(\"Vector v:\\n\", v)\n",
+    "\n",
+    "# Form the transformation matrix T\n",
     "T_inv = np.hstack([v, A @ v])\n",
-    "T_inv"
+    "print(\"Inverse of the transformation matrix:\\n\", T_inv)\n",
+    "\n",
+    "T = LA.inv(T_inv)\n",
+    "print(\"Transformation matrix T:\\n\", T)\n",
+    "\n",
+    "A_normal = np.matmul(T, np.matmul(A, LA.inv(T)))\n",
+    "print(\"Normal form of A:\\n\", A_normal)\n",
+    "\n",
+    "B_normal = np.matmul(T, B)\n",
+    "print(\"Normal form of B:\\n\", B_normal)\n",
+    "\n",
+    "c_normal = np.matmul(c, T_inv)\n",
+    "print(\"Normal form of c:\\n\", c_normal)\n",
+    "\n",
+    "T = np.array([[-10, 2],\n",
+    "                [16, -40]])\n",
+    "T_inv = np.array([[40, 2],\n",
+    "                [16, 10]])\n",
+    "\n",
+    "print(LA.matmul(LA.matmul(T, A), T_inv))"
    ]
   }
  ],
