--- a/linearAlgebra.ipynb
+++ b/linearAlgebra.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "36b524e9",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "60521b13",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "29a778dd",
    "metadata": {},
    "outputs": [
@@ -177,11 +177,74 @@
     "\n",
     "print(LA.matmul(LA.matmul(T, A), T_inv))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "bbd7241c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normal form of A:\n",
+      " [[-1. -0. -0.]\n",
+      " [ 0.  1.  0.]\n",
+      " [ 0.  0.  2.]]\n",
+      "Normal form of b:\n",
+      " [[1.0*alpha]\n",
+      " [1.00000000000000]\n",
+      " [-1.0*alpha]]\n",
+      "Normal form of c:\n",
+      " [ 1.  1. -1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.set_printoptions(suppress=True, precision=5) # This command avoids printing small numbers in scientific notation\n",
+    "alpha = sp.symbols('alpha')\n",
+    "\n",
+    "A = np.array([[0, -1, -1],\n",
+    "                [-1.5, 0.5, -1.5],\n",
+    "                [0.5, -0.5, 1.5]])\n",
+    "\n",
+    "b = sp.Matrix([[(1 + alpha) / np.sqrt(2)],\n",
+    "                [0],\n",
+    "                [(-1 + alpha) / np.sqrt(2)]])\n",
+    "\n",
+    "c = np.array([3/np.sqrt(2), -1/np.sqrt(2), 1/np.sqrt(2)])\n",
+    "\n",
+    "T = (1 / np.sqrt(2)) * np.array([[1, 1, 0],\n",
+    "                    [1, 0, 1],\n",
+    "                    [0, -1, -1]])\n",
+    "\n",
+    "T_inv = (1 / np.sqrt(2)) *np.array([[1, 1, 1],\n",
+    "                            [1, -1, -1],\n",
+    "                            [-1, 1, -1]])\n",
+    "\n",
+    "\n",
+    "\n",
+    "A_normal = np.matmul(T_inv, np.matmul(A, T))\n",
+    "b_normal = np.matmul(T_inv, b)\n",
+    "c_normal = np.matmul(c, T)\n",
+    "print(\"Normal form of A:\\n\", A_normal)\n",
+    "print(\"Normal form of b:\\n\", b_normal)\n",
+    "print(\"Normal form of c:\\n\", c_normal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e69a8e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "general_env",
    "language": "python",
    "name": "python3"
   },
@@ -195,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
