Change to german language.

--- a/linearAlgebra.ipynb
+++ b/linearAlgebra.ipynb
@@ -5,17 +5,33 @@
    "id": "a31cdf9b",
    "metadata": {},
    "source": [
-    "# Linear Algebra in System Theory"
+    "# Lineare Algebra in der Systemtheorie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "086b0fad",
+   "metadata": {},
+   "source": [
+    "Es gibt zwei wichtige Python-Bibliotheken, die in diesem Kurs hilfreich sein können:\n",
+    "\n",
+    "- **Sympy**: eine Bibliothek für symbolische Berechnungen.\n",
+    "- **Numpy**: die _de facto_ optimale Numerischebibliothek für Python.\n",
+    "\n",
+    "Für mehr Information von jeder Bibliothek, ihr könnt die [Sympy](https://docs.sympy.org/latest/modules/matrices/matrices.html) oder [Numpy](https://numpy.org/doc/2.2/reference/routines.linalg.html) Webseiten besuchen.\n",
+    "\n",
+    "Unser ersten Schritt ist beide Bibliotheken mit dem nächsten Befehl zu integrieren."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "36b524e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sp"
+    "import sympy as sp\n",
+    "import numpy as np"
    ]
   },
   {
@@ -23,14 +39,16 @@
    "id": "6f1504f4",
    "metadata": {},
    "source": [
-    "Solve a $A\\vec{x} = \\vec{b}$ problem. \n",
+    "### Beispiel 1: Symbolische Lösungen\n",
     "\n",
-    "For this we use the sp.linsolve() function of sympy, which returns an 'EmptySet' if the system is inconsistent (no solution)."
+    "Für Matrix $\\boldsymbol{A} = \\begin{bmatrix} 1 & 1 & 0 \\\\ 1 & 2 & 1 \\\\ 0 & 1 & 1 \\end{bmatrix}$ und Vektor $\\boldsymbol{b} = \\begin{bmatrix} 0 & 0 & 0 \\end{bmatrix}^{\\top}$ bestimmen Sie $\\boldsymbol{x}$ in $\\boldsymbol{A}\\boldsymbol{x} = \\boldsymbol{b}$. \n",
+    "\n",
+    "Hierzu verwenden wir die Funktion sp.linsolve() von Sympy, die ein „EmptySet“ zurückgibt, wenn das System inkonsistent ist (keine Lösung)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "3a12c5ef",
    "metadata": {},
    "outputs": [
@@ -38,12 +56,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution to the system: {(c3, -c3, c3)}\n"
+      "Lösung für das System:\n"
      ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left\\{\\left( x_{3}, \\  - x_{3}, \\  x_{3}\\right)\\right\\}$"
+      ],
+      "text/plain": [
+       "{(x3, -x3, x3)}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "c1, c2, c3 = sp.symbols('c1 c2 c3')\n",
+    "x1, x2, x3 = sp.symbols('x1 x2 x3')\n",
     "\n",
     "# Coefficient matrix A \n",
     "A = sp.Matrix([\n",
@@ -52,18 +83,30 @@
     "    [0, 1, 1]\n",
     "])\n",
     "\n",
-    "# Right-hand side vector (homogeneous case)\n",
-    "B = sp.Matrix([0, 0, 0])\n",
+    "# Right-hand side vector\n",
+    "b = sp.Matrix([0, 0, 0])\n",
     "\n",
-    "# Solve the system A * [x, y] = B\n",
-    "solution = sp.linsolve((A, B), (c1, c2, c3))\n",
+    "# Solve the system A * x = B\n",
+    "solution = sp.linsolve((A, b), (x1, x2, x3))\n",
     "\n",
-    "print(\"Solution to the system:\", solution)"
+    "print(\"Lösung für das System:\")\n",
+    "solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d88f8adf",
+   "metadata": {},
+   "source": [
+    "### Beispiel 2: Eigenwerte und Eigenvektoren\n",
+    "\n",
+    "Wir können auch **Eigenwerten** und **Eigenvektoren** finden mit den Funktionen eigenvals() und eigenvects().\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "60521b13",
    "metadata": {},
    "outputs": [
@@ -71,29 +114,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eigenvalues: -5, -1\n",
+      "Eigenwerten: -5, -1\n",
       "\n",
-      "exp(At): Matrix([[3*exp(-t)/4 + exp(-5*t)/4, 3*exp(-t)/4 - 3*exp(-5*t)/4], [exp(-t)/4 - exp(-5*t)/4, exp(-t)/4 + 3*exp(-5*t)/4]])\n",
-      "\n"
+      "Eigenvektoren:\n",
+      "Eigenwert: -5, Vielfachheit: 1, Eigenvektoren: [Matrix([\n",
+      "[-1],\n",
+      "[ 1]])]\n",
+      "Eigenwert: -1, Vielfachheit: 1, Eigenvektoren: [Matrix([\n",
+      "[3],\n",
+      "[1]])]\n",
+      "\n",
+      "exp(At):\n"
      ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{3 e^{- t}}{4} + \\frac{e^{- 5 t}}{4} & \\frac{3 e^{- t}}{4} - \\frac{3 e^{- 5 t}}{4}\\\\\\frac{e^{- t}}{4} - \\frac{e^{- 5 t}}{4} & \\frac{e^{- t}}{4} + \\frac{3 e^{- 5 t}}{4}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[3*exp(-t)/4 + exp(-5*t)/4, 3*exp(-t)/4 - 3*exp(-5*t)/4],\n",
+       "[  exp(-t)/4 - exp(-5*t)/4,   exp(-t)/4 + 3*exp(-5*t)/4]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sympy as sp\n",
-    "\n",
     "A = sp.Matrix([[-2, 3],\n",
     "                [1, -4]])\n",
+    "\n",
     "t = sp.Symbol('t')\n",
+    "\n",
     "eigenvalues = A.eigenvals(multiple=True)\n",
-    "print(f\"Eigenvalues: {eigenvalues[0]}, {eigenvalues[1]}\\n\")\n",
+    "print(f\"Eigenwerten: {eigenvalues[0]}, {eigenvalues[1]}\\n\")\n",
+    "\n",
+    "eigenvektoren = A.eigenvects()\n",
+    "print(\"Eigenvektoren:\")\n",
+    "for eigenvalue, multiplicity, eigvecs in eigenvektoren:\n",
+    "    print(f\"Eigenwert: {eigenvalue}, Vielfachheit: {multiplicity}, Eigenvektoren: {eigvecs}\")\n",
     "\n",
     "exp_At = (A * t).exp()\n",
-    "print(f\"exp(At): {exp_At}\\n\")"
+    "print(f\"\\nexp(At):\")\n",
+    "exp_At "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "29a778dd",
    "metadata": {},
    "outputs": [
@@ -180,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "bbd7241c",
    "metadata": {},
    "outputs": [
@@ -191,7 +262,7 @@
       "Normal form of A:\n",
       " [[-1. -0. -0.]\n",
       " [ 0.  1.  0.]\n",
-      " [ 0.  0.  2.]]\n",
+      " [-0.  0.  2.]]\n",
       "Normal form of b:\n",
       " [[1.0*alpha]\n",
       " [1.00000000000000]\n",
@@ -235,16 +306,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "5e69a8e3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3*exp(-t) - 2*exp(-2*t) + exp(-3*t)\n",
+      "2.5*exp(-t) - 4.0*exp(-2*t) + 1.5*exp(-3*t)\n",
+      "0.5*exp(-t) - 1.0*exp(-2*t) + 0.5*exp(-3*t)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1.0 e^{- t} + 1.0 e^{- 2 t} & 0 & 0\\\\0 & 2.0 e^{- 2 t} & 0\\\\0 & 0 & 1.0 e^{- 2 t} + 1.0 e^{- 3 t}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[1.0*exp(-t) + 1.0*exp(-2*t),             0,                             0],\n",
+       "[                          0, 2.0*exp(-2*t),                             0],\n",
+       "[                          0,             0, 1.0*exp(-2*t) + 1.0*exp(-3*t)]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = sp.Symbol('t')\n",
+    "A = sp.Matrix([[-1, 0, 0],\n",
+    "                [0, -2, 0],\n",
+    "                [0, 0, -3]])\n",
+    "\n",
+    "alpha0 = 2*sp.exp(-1*t) + sp.exp(-3*t) - 2*sp.exp(-2*t) + sp.exp(-1*t)\n",
+    "print(alpha0)\n",
+    "alpha1 = sp.exp(-1*t) + ((3 / 2) * (sp.exp(-3*t) - 2 * sp.exp(-2*t) + sp.exp(-1*t))) - sp.exp(-2*t)\n",
+    "print(alpha1)\n",
+    "alpha2 = (1 / 2) * (sp.exp(-3*t) - 2 * sp.exp(-2*t) + sp.exp(-1*t))\n",
+    "print(alpha2)\n",
+    "\n",
+    "exp_At = sp.eye(3) * alpha0 + A * alpha1 + (A * A) * alpha2\n",
+    "exp_At"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "general_env",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -258,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
