Add changes to calculations.

--- a/linearAlgebra.ipynb
+++ b/linearAlgebra.ipynb
@@ -100,13 +100,13 @@
    "source": [
     "### Beispiel 2: Eigenwerte und Eigenvektoren\n",
     "\n",
-    "Wir können auch **Eigenwerten** und **Eigenvektoren** finden mit den Funktionen eigenvals() und eigenvects().\n",
+    "Wir können auch **Eigenwerte** und **Eigenvektoren** finden mit den Funktionen eigenvals() und eigenvects().\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "60521b13",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,76 @@
       "[ 1]])]\n",
       "Eigenwert: -1, Vielfachheit: 1, Eigenvektoren: [Matrix([\n",
       "[3],\n",
-      "[1]])]\n",
+      "[1]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = sp.Matrix([[-2, 3],\n",
+    "                [1, -4]])\n",
+    "\n",
+    "t = sp.Symbol('t')\n",
+    "\n",
+    "eigenwerte = A.eigenvals(multiple=True)\n",
+    "print(f\"Eigenwerten: {eigenvalues[0]}, {eigenvalues[1]}\\n\")\n",
+    "\n",
+    "eigenvektoren = A.eigenvects()\n",
+    "print(\"Eigenvektoren:\")\n",
+    "for eigenvalue, multiplicity, eigvecs in eigenvektoren:\n",
+    "    print(f\"Eigenwert: {eigenvalue}, Vielfachheit: {multiplicity}, Eigenvektoren: {eigvecs}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67e0a305",
+   "metadata": {},
+   "source": [
+    "Achtung mit den letzen Funktionen, denn die Eigenwerte und Eigenvektoren sind verpackt als eine Liste, deswegen brauchen wir ein Indexnummer (in diesem Fall entweder 0 oder 1) als: eigenvalues[0] oder eigenvalues[1]. Ihr könnt der Typ der Variablen überprüfen in Python mit dem Befehl type()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f70bfff8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Besipiel für type() funktion\n",
+    "print(type(eigenwerte))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4cdcdc7",
+   "metadata": {},
+   "source": [
+    "### Beispiel 3: Exponentialmatrix\n",
+    "\n",
+    "In Quiz 1 von unserem Kurs steht das folgende Problem:\n",
+    "\n",
+    "Berechnen Sie die Matrix-Exponentialfunktion $\\exp(\\boldsymbol{A}t)$  mit der folgenden Matrix $\\boldsymbol{A} = \\begin{bmatrix} -2 & 3 \\\\ 1 & -4 \\end{bmatrix}$.\n",
+    "\n",
+    "Mit Sympy die Lösung ist trivial, mann muss einfach die Exponentialfunktion .exp() für die Multiplikation $\\boldsymbol{A} t$ berechnen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aaab3bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "exp(At):\n"
      ]
@@ -138,26 +207,14 @@
        "[  exp(-t)/4 - exp(-5*t)/4,   exp(-t)/4 + 3*exp(-5*t)/4]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = sp.Matrix([[-2, 3],\n",
-    "                [1, -4]])\n",
-    "\n",
-    "t = sp.Symbol('t')\n",
-    "\n",
-    "eigenvalues = A.eigenvals(multiple=True)\n",
-    "print(f\"Eigenwerten: {eigenvalues[0]}, {eigenvalues[1]}\\n\")\n",
-    "\n",
-    "eigenvektoren = A.eigenvects()\n",
-    "print(\"Eigenvektoren:\")\n",
-    "for eigenvalue, multiplicity, eigvecs in eigenvektoren:\n",
-    "    print(f\"Eigenwert: {eigenvalue}, Vielfachheit: {multiplicity}, Eigenvektoren: {eigvecs}\")\n",
-    "\n",
     "exp_At = (A * t).exp()\n",
+    "\n",
     "print(f\"\\nexp(At):\")\n",
     "exp_At "
    ]
