Add changes to scripts.

--- a/linearAlgebra.ipynb
+++ b/linearAlgebra.ipynb
@@ -13,14 +13,7 @@
    "id": "086b0fad",
    "metadata": {},
    "source": [
-    "Es gibt zwei wichtige Python-Bibliotheken, die in diesem Kurs hilfreich sein können:\n",
-    "\n",
-    "- **Sympy**: eine Bibliothek für symbolische Berechnungen.\n",
-    "- **Numpy**: die _de facto_ optimale Numerischebibliothek für Python.\n",
-    "\n",
-    "Für mehr Information von jeder Bibliothek, ihr könnt die [Sympy](https://docs.sympy.org/latest/modules/matrices/matrices.html) oder [Numpy](https://numpy.org/doc/2.2/reference/routines.linalg.html) Webseiten besuchen.\n",
-    "\n",
-    "Unser ersten Schritt ist beide Bibliotheken mit dem nächsten Befehl zu integrieren."
+    "Dieses Notebook liegt bereit um Mathematik Probleme mit Symbolen zu lösen. Dieses Notebook liegt bereit um Mathematik Probleme zu lösen mit Symbolen. Man braucht ein Python Umgebung um dieses Code zu laufen. Die Konzepten, die hier präsentiert sind, sind nur ein klein Teil von alle den Sachen die Mann mit Python machen kann."
    ]
   },
   {
@@ -43,12 +36,14 @@
     "\n",
     "Für Matrix $\\boldsymbol{A} = \\begin{bmatrix} 1 & 1 & 0 \\\\ 1 & 2 & 1 \\\\ 0 & 1 & 1 \\end{bmatrix}$ und Vektor $\\boldsymbol{b} = \\begin{bmatrix} 0 & 0 & 0 \\end{bmatrix}^{\\top}$ bestimmen Sie $\\boldsymbol{x}$ in $\\boldsymbol{A}\\boldsymbol{x} = \\boldsymbol{b}$. \n",
     "\n",
-    "Hierzu verwenden wir die Funktion sp.linsolve() von Sympy, die ein „EmptySet“ zurückgibt, wenn das System inkonsistent ist (keine Lösung)."
+    "Hierzu verwenden wir die Funktion sp.linsolve() von Sympy, die ein „EmptySet“ zurückgibt, wenn das System inkonsistent ist (keine Lösung). \n",
+    "\n",
+    "Wir nehmen dann $\\boldsymbol{x} = \\begin{bmatrix}x_1 & x_2 & x_3\\end{bmatrix}^{\\top}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3a12c5ef",
    "metadata": {},
    "outputs": [
@@ -74,14 +69,15 @@
     }
    ],
    "source": [
-    "x1, x2, x3 = sp.symbols('x1 x2 x3')\n",
-    "\n",
-    "# Coefficient matrix A \n",
+    "# Definieren Sie Matrix A\n",
     "A = sp.Matrix([\n",
     "    [1, 1, 0],\n",
     "    [1, 2, 1],\n",
     "    [0, 1, 1]\n",
     "])\n",
+    "\n",
+    "# Definieren Sie die Variablen von x\n",
+    "x1, x2, x3 = sp.symbols('x1 x2 x3')\n",
     "\n",
     "# Right-hand side vector\n",
     "b = sp.Matrix([0, 0, 0])\n",
@@ -95,85 +91,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d88f8adf",
-   "metadata": {},
-   "source": [
-    "### Beispiel 2: Eigenwerte und Eigenvektoren\n",
-    "\n",
-    "Wir können auch **Eigenwerte** und **Eigenvektoren** finden mit den Funktionen eigenvals() und eigenvects().\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "60521b13",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eigenwerten: -5, -1\n",
-      "\n",
-      "Eigenvektoren:\n",
-      "Eigenwert: -5, Vielfachheit: 1, Eigenvektoren: [Matrix([\n",
-      "[-1],\n",
-      "[ 1]])]\n",
-      "Eigenwert: -1, Vielfachheit: 1, Eigenvektoren: [Matrix([\n",
-      "[3],\n",
-      "[1]])]\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = sp.Matrix([[-2, 3],\n",
-    "                [1, -4]])\n",
-    "\n",
-    "t = sp.Symbol('t')\n",
-    "\n",
-    "eigenwerte = A.eigenvals(multiple=True)\n",
-    "print(f\"Eigenwerten: {eigenvalues[0]}, {eigenvalues[1]}\\n\")\n",
-    "\n",
-    "eigenvektoren = A.eigenvects()\n",
-    "print(\"Eigenvektoren:\")\n",
-    "for eigenvalue, multiplicity, eigvecs in eigenvektoren:\n",
-    "    print(f\"Eigenwert: {eigenvalue}, Vielfachheit: {multiplicity}, Eigenvektoren: {eigvecs}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "67e0a305",
-   "metadata": {},
-   "source": [
-    "Achtung mit den letzen Funktionen, denn die Eigenwerte und Eigenvektoren sind verpackt als eine Liste, deswegen brauchen wir ein Indexnummer (in diesem Fall entweder 0 oder 1) als: eigenvalues[0] oder eigenvalues[1]. Ihr könnt der Typ der Variablen überprüfen in Python mit dem Befehl type()."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "f70bfff8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Besipiel für type() funktion\n",
-    "print(type(eigenwerte))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e4cdcdc7",
    "metadata": {},
    "source": [
-    "### Beispiel 3: Exponentialmatrix\n",
+    "### Beispiel 2: Exponentialmatrix\n",
     "\n",
     "In Quiz 1 von unserem Kurs steht das folgende Problem:\n",
     "\n",
@@ -184,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "1aaab3bd",
    "metadata": {},
    "outputs": [
@@ -207,12 +128,20 @@
        "[  exp(-t)/4 - exp(-5*t)/4,   exp(-t)/4 + 3*exp(-5*t)/4]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Definieren Sie ein Matrix A\n",
+    "A = sp.Matrix([[-2, 3],\n",
+    "                [1, -4]])\n",
+    "\n",
+    "# Definieren Sie eine Variable t\n",
+    "t = sp.symbols('t')\n",
+    "\n",
+    "# Berechnen Sie die Matrixexponentialfunktion exp(At)\n",
     "exp_At = (A * t).exp()\n",
     "\n",
     "print(f\"\\nexp(At):\")\n",
@@ -220,8 +149,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ffacd33",
+   "metadata": {},
+   "source": [
+    "### Beispiel 3: Beobachtungsnormalform\n",
+    "\n",
+    "Von Übung 8, Aufgabe 2a) wir finden:\n",
+    "\n",
+    "Gegeben sei ein lineares System mit\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\t\\boldsymbol{A} & =\\left[\\begin{array}{ll}\n",
+    "\t\t-2 & 4 \\\\\n",
+    "\t\t-2 & 0\n",
+    "\t\\end{array}\\right] & \\boldsymbol{B} & =\\left[\\begin{array}{l}\n",
+    "\t\t2 \\\\\n",
+    "\t\t10\n",
+    "\t\\end{array}\\right] \\\\\n",
+    "\t\\boldsymbol{C} & =\\left[\\begin{array}{ll}\n",
+    "\t\t1 & 0\n",
+    "\t\\end{array}\\right] & d & =0\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Bestimmen Sie die Transformation $\\boldsymbol{T}$ mit $\\boldsymbol{z}=\\boldsymbol{T} \\boldsymbol{x}$, so dass die Dynamik von $\\boldsymbol{z}$ in Beobachtungsnormalform ist."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "29a778dd",
    "metadata": {},
    "outputs": [
@@ -229,86 +186,125 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Observability matrix Po:\n",
+      "Beobachtbarkeitsmatrix Po:\n",
       " [[ 1  0]\n",
       " [-2  4]]\n",
-      "Inverse of the observability matrix Po_inv:\n",
+      "Inverse der Beobachtbarkeitsmatrix Po_inv:\n",
       " [[ 1.   -0.  ]\n",
       " [ 0.5   0.25]]\n",
-      "Vector v:\n",
+      "Vektor v:\n",
       " [[0.  ]\n",
       " [0.25]]\n",
-      "Inverse of the transformation matrix:\n",
+      "Inverse von Transformationsmatrix:\n",
       " [[0.   1.  ]\n",
       " [0.25 0.  ]]\n",
-      "Transformation matrix T:\n",
+      "Transformationsmatrix T:\n",
       " [[0. 4.]\n",
       " [1. 0.]]\n",
-      "Normal form of A:\n",
+      "Beobachtungsnormalform von A:\n",
       " [[ 0. -8.]\n",
       " [ 1. -2.]]\n",
-      "Normal form of B:\n",
+      "Beobachtungsnormalform von b:\n",
       " [[40.]\n",
       " [ 2.]]\n",
-      "Normal form of c:\n",
-      " [0. 1.]\n",
-      "[[   0 -368]\n",
-      " [2944  736]]\n"
+      "Beobachtungsnormalform von c:\n",
+      " [0. 1.]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "from numpy import linalg as LA\n",
     "\n",
-    "# Define the matrices and vectors\n",
+    "# Definieren Sie die Matrizen A, B und c\n",
     "A = np.array([[-2, 4],\n",
     "                [-2, 0]])\n",
-    "B = np.array([[2],\n",
+    "b = np.array([[2],\n",
     "                [10]])\n",
-    "c = np.array([1, 0]) # careful, this is a column vector\n",
+    "c = np.array([1, 0]) # Achtung c ist ein Zeilenvektor\n",
     "\n",
-    "en = np.array([[0], [1]]) # this is a row vector\n",
+    "en = np.array([[0], [1]])\n",
     "\n",
-    "# Form the observavbility matrix\n",
+    "# Berechnen Sie die Beobachtbarkeitsmatrix Po\n",
     "Po = np.array([c, np.matmul(c, A)])\n",
-    "print(\"Observability matrix Po:\\n\", Po)\n",
+    "print(\"Beobachtbarkeitsmatrix Po:\\n\", Po)\n",
     "\n",
-    "# Find the inverse of the observability matrix\n",
-    "Po_inv = LA.inv(Po)\n",
-    "print(\"Inverse of the observability matrix Po_inv:\\n\", Po_inv)\n",
+    "# Berechnen Sie die Inverse der Beobachtbarkeitsmatrix Po\n",
+    "Po_inv = np.linalg.inv(Po)\n",
+    "print(\"Inverse der Beobachtbarkeitsmatrix Po_inv:\\n\", Po_inv)\n",
     "\n",
-    "# Calculate the vector\n",
+    "# Berechnen Sie den Vektor v\n",
     "v = np.matmul(Po_inv, en)\n",
-    "print(\"Vector v:\\n\", v)\n",
+    "print(\"Vektor v:\\n\", v)\n",
     "\n",
-    "# Form the transformation matrix T\n",
+    "# Berechnen Sie die Inverse von Transformation T\n",
     "T_inv = np.hstack([v, A @ v])\n",
-    "print(\"Inverse of the transformation matrix:\\n\", T_inv)\n",
+    "print(\"Inverse von Transformationsmatrix:\\n\", T_inv)\n",
     "\n",
-    "T = LA.inv(T_inv)\n",
-    "print(\"Transformation matrix T:\\n\", T)\n",
+    "# Berechnen Sie die Transformation T\n",
+    "T = np.linalg.inv(T_inv)\n",
+    "print(\"Transformationsmatrix T:\\n\", T)\n",
     "\n",
-    "A_normal = np.matmul(T, np.matmul(A, LA.inv(T)))\n",
-    "print(\"Normal form of A:\\n\", A_normal)\n",
+    "# Berechnen Sie die Normalform der Matrizen A, B und c\n",
+    "A_normal = np.matmul(T, np.matmul(A, np.linalg.inv(T)))\n",
+    "print(\"Beobachtungsnormalform von A:\\n\", A_normal)\n",
     "\n",
-    "B_normal = np.matmul(T, B)\n",
-    "print(\"Normal form of B:\\n\", B_normal)\n",
+    "B_normal = np.matmul(T, b)\n",
+    "print(\"Beobachtungsnormalform von b:\\n\", B_normal)\n",
     "\n",
     "c_normal = np.matmul(c, T_inv)\n",
-    "print(\"Normal form of c:\\n\", c_normal)\n",
+    "print(\"Beobachtungsnormalform von c:\\n\", c_normal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46753f27",
+   "metadata": {},
+   "source": [
+    "### Beispiel 4: Normalform mit Sympy\n",
     "\n",
-    "T = np.array([[-10, 2],\n",
-    "                [16, -40]])\n",
-    "T_inv = np.array([[40, 2],\n",
-    "                [16, 10]])\n",
+    "Von Übung 8, Aufgabe 3a) wir finden:\n",
     "\n",
-    "print(LA.matmul(LA.matmul(T, A), T_inv))"
+    "Für das Systems \n",
+    " $$\n",
+    " \\begin{aligned}\n",
+    " \t\\dot{\\boldsymbol{x}} & =\\left[\\begin{array}{ccc}\n",
+    " \t\t0 & -1 & -1 \\\\\n",
+    " \t\t-1.5 & 0.5 & -1.5 \\\\\n",
+    " \t\t0.5 & -0.5 & 1.5\n",
+    " \t\\end{array}\\right] \\boldsymbol{x}+\\left[\\begin{array}{c}\n",
+    " \t\t(1+\\alpha) / \\sqrt{2} \\\\\n",
+    " \t\t0 \\\\\n",
+    " \t\t(-1+\\alpha) / \\sqrt{2}\n",
+    " \t\\end{array}\\right] u \\\\\n",
+    " \ty & =\\left[\\begin{array}{lll}\n",
+    " \t\t3 / \\sqrt{2} & -1 / \\sqrt{2} & 1 / \\sqrt{2}\n",
+    " \t\\end{array}\\right] \\boldsymbol{x}\n",
+    " \\end{aligned}\n",
+    " $$\n",
+    " mit $\\alpha \\in \\mathbb{R}$ sei eine Zustandstransformation\n",
+    "  der Form\n",
+    " $$\n",
+    " x=\\boldsymbol{T} z\n",
+    " $$\n",
+    " bekannt, wobei $z$ der transformierten Zustand ist. Die Transformationsmatrix $\\boldsymbol{T}$ und ihre Inverse $\\boldsymbol{T}^{-1}$ sind wie folgt gegeben:\n",
+    " $$\n",
+    " \\boldsymbol{T}=\\frac{1}{\\sqrt{2}}\\left[\\begin{array}{ccc}\n",
+    " \t1 & 1 & 0 \\\\\n",
+    " \t1 & 0 & 1 \\\\\n",
+    " \t0 & -1 & -1\n",
+    " \\end{array}\\right], \\quad \\boldsymbol{T}^{-1}=\\frac{1}{\\sqrt{2}}\\left[\\begin{array}{ccc}\n",
+    " \t1 & 1 & 1 \\\\\n",
+    " \t1 & -1 & -1 \\\\\n",
+    " \t-1 & 1 & -1\n",
+    " \\end{array}\\right]\n",
+    " $$\n",
+    "\n",
+    " Da wir eine symbolische Variable haben, müssen wir dieses Problem mit Sympy lösen."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bbd7241c",
    "metadata": {},
    "outputs": [
@@ -330,9 +326,12 @@
     }
    ],
    "source": [
-    "np.set_printoptions(suppress=True, precision=5) # This command avoids printing small numbers in scientific notation\n",
+    "np.set_printoptions(suppress=True, precision=5) # Dies verhindert die wissenschaftliche Notation von kleine Zahlen\n",
+    "\n",
+    "# Definieren Sie eine Symbole für alpha\n",
     "alpha = sp.symbols('alpha')\n",
     "\n",
+    "# Definieren Sie die Matrizen A, b und c, T und Inverse von T für die Normalform\n",
     "A = np.array([[0, -1, -1],\n",
     "                [-1.5, 0.5, -1.5],\n",
     "                [0.5, -0.5, 1.5]])\n",
@@ -352,62 +351,13 @@
     "                            [-1, 1, -1]])\n",
     "\n",
     "\n",
-    "\n",
+    "# Berechnen Sie die Normalform der Matrizen A, b und c\n",
     "A_normal = np.matmul(T_inv, np.matmul(A, T))\n",
     "b_normal = np.matmul(T_inv, b)\n",
     "c_normal = np.matmul(c, T)\n",
     "print(\"Normal form of A:\\n\", A_normal)\n",
     "print(\"Normal form of b:\\n\", b_normal)\n",
     "print(\"Normal form of c:\\n\", c_normal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "5e69a8e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3*exp(-t) - 2*exp(-2*t) + exp(-3*t)\n",
-      "2.5*exp(-t) - 4.0*exp(-2*t) + 1.5*exp(-3*t)\n",
-      "0.5*exp(-t) - 1.0*exp(-2*t) + 0.5*exp(-3*t)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1.0 e^{- t} + 1.0 e^{- 2 t} & 0 & 0\\\\0 & 2.0 e^{- 2 t} & 0\\\\0 & 0 & 1.0 e^{- 2 t} + 1.0 e^{- 3 t}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[1.0*exp(-t) + 1.0*exp(-2*t),             0,                             0],\n",
-       "[                          0, 2.0*exp(-2*t),                             0],\n",
-       "[                          0,             0, 1.0*exp(-2*t) + 1.0*exp(-3*t)]])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t = sp.Symbol('t')\n",
-    "A = sp.Matrix([[-1, 0, 0],\n",
-    "                [0, -2, 0],\n",
-    "                [0, 0, -3]])\n",
-    "\n",
-    "alpha0 = 2*sp.exp(-1*t) + sp.exp(-3*t) - 2*sp.exp(-2*t) + sp.exp(-1*t)\n",
-    "print(alpha0)\n",
-    "alpha1 = sp.exp(-1*t) + ((3 / 2) * (sp.exp(-3*t) - 2 * sp.exp(-2*t) + sp.exp(-1*t))) - sp.exp(-2*t)\n",
-    "print(alpha1)\n",
-    "alpha2 = (1 / 2) * (sp.exp(-3*t) - 2 * sp.exp(-2*t) + sp.exp(-1*t))\n",
-    "print(alpha2)\n",
-    "\n",
-    "exp_At = sp.eye(3) * alpha0 + A * alpha1 + (A * A) * alpha2\n",
-    "exp_At"
    ]
   }
  ],
