--- a/einfuehrung.ipynb
+++ b/einfuehrung.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7ec49637",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0cecfa39-8f01-4dc8-a96f-acfdef768d25",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "R"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "f2bde4df",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "255f03e5",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "990dd59f",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "531886a1",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "ab2b5ca7",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "9a126fb6",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "        [3, 4]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4ed94460",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rang der Matrix A (NumPy): 2\n"
+      "Rang der Matrix A: 2\n"
      ]
     }
    ],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9ee53e06",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Determinante der Matrix A (NumPy): -2.0000000000000004\n"
+      "Determinante der Matrix A: -2.0000000000000004\n"
      ]
     }
    ],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "80da7b9a",
    "metadata": {},
    "outputs": [
@@ -337,10 +337,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eigenwerte (NumPy): [-0.37  5.37]\n",
-      "Eigenvektoren (NumPy):\n",
-      "[[-0.82 -0.42]\n",
-      " [ 0.57 -0.91]]\n"
+      "Eigenwerte: [-0.37228132  5.37228132]\n",
+      "Eigenvektoren:\n",
+      "[[-0.82456484 -0.41597356]\n",
+      " [ 0.56576746 -0.90937671]]\n"
      ]
     }
    ],
@@ -367,7 +367,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "general_env",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
